# pangea-boto3

./: pyproject.toml
src/pangea_boto3/: __init__.py
