[project]
name = "pangea-boto3"
version = "0.2.0"
description = "A wrapper around the boto3 Bedrock Runtime client"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Pangea", email = "support@pangea.cloud" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.74",
    "pangea-sdk>=6.13.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-runtime]==1.40.74",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.5",
]

[build-system]
requires = ["uv_build==0.9.9"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
implicit_reexport = false
cache_fine_grained = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
ignore = []
